--- a/static/tools/okidoki/index.html
+++ b/static/tools/okidoki/index.html
@@ -5,131 +5,130 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>沖ドキツール</title>
 
-  <!-- OGP / Twitterカード（必要最低限） -->
+  <!-- OGP / Twitterカード（画像パス修正済み） -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="沖ドキツール">
   <meta property="og:description" content="沖ドキシリーズ専用ツール。RB/BB履歴から差枚と有利Gを簡単集計。">
   <meta property="og:url" content="https://kenkentools.com/okidoki/tools">
-  <meta property="og:image" content="https://kenkentools.com/static/okidoki.jpg">
   <meta property="og:site_name" content="けんけんスロット分析ツール">
+  <meta property="og:locale" content="ja_JP">
+  <meta property="og:image" content="https://kenkentools.com/static/tools/okidoki/img/okidoki.jpg">
+  <meta property="og:image:type" content="image/jpeg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="沖ドキツール">
   <meta name="twitter:description" content="沖ドキシリーズ専用ツール。RB/BB履歴から差枚と有利Gを簡単集計。">
-  <meta name="twitter:image" content="https://kenkentools.com/static/okidoki.jpg">
+  <meta name="twitter:image" content="https://kenkentools.com/static/tools/okidoki/img/okidoki.jpg">
 
-  <!-- ===== 最小限スタイル（スマホ優先） ===== -->
+  <link rel="canonical" href="https://kenkentools.com/okidoki/tools">
+
+  <!-- ===== スタイル（スマホ優先・必要最小限） ===== -->
   <style>
     :root{
       --gap: 6px;
       --font: 14px;
       --maxw: 820px;
-      --theme: #F7C948; /* 初期テーマ色（ゴールド） */
+      --theme: #F7C948;       /* メイン色（枠・ライン）初期=ゴールド */
+      --theme-light: #FFF8DC; /* 見出し背景の薄色 初期=ゴールド薄 */
     }
     *{ box-sizing: border-box; }
-    body{
-      margin: 14px;
-      font-size: var(--font);
-      color: #222;
-    }
-    .container{ max-width: var(--maxw); margin: 0 auto; }
+    body{ margin:14px; font-size:var(--font); color:#222; }
+    .container{ max-width:var(--maxw); margin:0 auto; }
+
     h1{
-      margin: 0 0 12px 0;
-      font-size: 20px;
-      padding-left: 10px;
-      border-left: 6px solid var(--theme);
+      margin:0 0 12px 0;
+      font-size:20px;
+      padding-left:10px;
+      border-left:6px solid var(--theme); /* タイトル左ライン=テーマ色 */
     }
 
-    /* テーマ切替ボタン（左寄せのまま・コンパクト） */
-    .theme-bar{ display:flex; gap:8px; flex-wrap:wrap; margin-bottom: 8px; }
-    .theme-btn{
-      border:1px solid #ccc; border-radius:999px;
-      padding:6px 10px; background:#fff; cursor:pointer; font-weight:600;
-    }
+    /* テーマ切替（左寄せ） */
+    .theme-bar{ display:flex; gap:8px; flex-wrap:wrap; margin-bottom:8px; }
+    .theme-btn{ border:1px solid #ccc; border-radius:999px; padding:6px 10px; background:#fff; cursor:pointer; font-weight:600; }
     .theme-btn[data-key="gold"]{ background:#FFF6CF; }
     .theme-btn[data-key="black"]{ background:#e9e9e9; }
     .theme-btn[data-key="gorgeous"]{ background:#ffe5f0; }
-    .theme-btn.active{ border-color: var(--theme); }
+    .theme-btn.active{ border-color:var(--theme); }
 
-    /* 操作ボタン */
+    /* 操作ボタン（左寄せ） */
     .controls{ display:flex; gap:var(--gap); flex-wrap:wrap; }
     button{ padding:5px 8px; border:1px solid #ccc; border-radius:6px; background:#fff; cursor:pointer; }
 
-    /* テーブル（スマホでも崩れにくい最小指定） */
+    /* テーブル（列幅・中央揃え） */
     table{ width:100%; border-collapse:collapse; margin-top:10px; table-layout:fixed; }
     th, td{
-      border: 1px solid #e5e5e5;
-      padding: 6px 4px;
-      text-align: center;          /* 全セル中央 */
-      vertical-align: middle;      /* 縦中央 */
-      font-size: 13px;
+      border:1px solid #e5e5e5;
+      padding:6px 4px;
+      text-align:center;
+      vertical-align:middle;
+      font-size:13px;
     }
-    thead th{ background:#fafafa; }
+    thead th{ background: var(--theme-light); } /* テーマ薄色に同期 */
 
-    /* 列幅：13%, 22%, 13%, 13%, 13%, 13%（指定通り） */
+    /* 列幅（要望：種別を狭く / ゲーム数を広く） */
+    /* 履歴 / 種別 / ゲーム数 / 有利G / 差枚 / 操作 */
     th.col-label{ width:13%; }
-    th.col-kind { width:22%; }
-    th.col-games{ width:13%; }
+    th.col-kind { width:18%; } /* 22% → 18% */
+    th.col-games{ width:17%; } /* 13% → 17% */
     th.col-yuuri{ width:13%; }
     th.col-diff { width:13%; }
     th.col-ops  { width:13%; }
 
-    /* 「ゲーム数」「有利G数」が2行にならないように（見出し・値ともに nowrap） */
+    /* 「ゲーム数」「有利G数」を2行化させない（見出し・値ともに nowrap） */
     thead th:nth-child(3),
     thead th:nth-child(4),
     tbody td:nth-child(3),
-    tbody td:nth-child(4){
-      white-space: nowrap;
-    }
+    tbody td:nth-child(4){ white-space: nowrap; }
 
-    /* 「有利G数」「差枚数」の値を確実に中央揃え */
+    /* 「有利G数」「差枚数」の値を確実に中央 */
     tbody td:nth-child(4) .value-text,
     tbody td:nth-child(5) .value-text{
-      display: inline-block;
-      width: 100%;
-      text-align: center;
+      display:inline-block; width:100%; text-align:center;
     }
 
     /* 種別ボタン（RB=青 / BB=赤 固定） */
     .kind-btns{ display:flex; justify-content:center; gap:6px; }
-    .kind-btns button{
-      border:1px solid #ccc; border-radius:6px; padding:4px 8px; cursor:pointer; white-space:nowrap;
-    }
+    .kind-btns button{ border:1px solid #ccc; border-radius:6px; padding:4px 8px; cursor:pointer; white-space:nowrap; }
     .kind-btns button.rb-selected{ background:#1976d2; color:#fff; border-color:#1976d2; }
     .kind-btns button.bb-selected{ background:#d32f2f; color:#fff; border-color:#d32f2f; }
 
-    /* 入力（モバイルで2行化しない） */
+    /* 数字入力：入力で横幅/行高が動かないよう固定 */
     input[type="number"]{
-      width: 100%;
-      max-width: 5em;
+      width:5.5em; min-width:5.5em; max-width:5.5em;
+      height:28px; line-height:28px;
       text-align:center;
-      height: 28px;          /* 2行化防止 */
-      line-height: 1.2;
     }
+    /* スピンボタン非表示 */
+    input[type="number"]{ -moz-appearance:textfield; appearance:textfield; }
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button{ -webkit-appearance:none; margin:0; }
 
-    /* グラフ（モバイルは高さを自動調整） */
-    .charts{ margin-top: 12px; }
+    /* グラフ（枠線はテーマ色に同期） */
+    .charts{ margin-top:12px; }
     .chart-card{
-      padding:10px; border:1px solid #e5e5e5; border-radius:8px; background:#fff;
-      /* PCは控えめ、モバイルは40vhに */
-      height: 420px;
+      padding:10px;
+      border:2px solid var(--theme); /* テーマで変化 */
+      border-radius:8px;
+      background:#fff;
+      height:420px; /* PC控えめ、モバイルは下のメディアクエリ */
     }
     #chartScatter{ width:100%; height:100%; display:block; }
 
     /* ===== スマホ最適化（<=640px） ===== */
     @media (max-width: 640px){
-      :root{ --font: 12px; }           /* 文字を控えめに */
-      body{ margin: 10px; }
-      th, td{ font-size: 12px; padding: 4px 3px; }
-      .theme-btn{ padding:5px 8px; font-size: 12px; }
-      button{ padding:5px 8px; font-size: 12px; }
-      .chart-card{ height: 40vh; min-height: 200px; }  /* モバイルは小さめ表示 */
-      /* iOSのズーム抑止：入力中でも視認性は担保（必要最小限） */
-      input[type="number"]{ font-size: 16px; }
+      :root{ --font: 12px; }
+      body{ margin:10px; }
+      th, td{ font-size:12px; padding:4px 3px; }
+      .theme-btn, button{ padding:5px 8px; font-size:12px; }
+      .chart-card{ height:40vh; min-height:200px; }
+      input[type="number"]{ font-size:16px; } /* iOSズーム抑止 */
     }
   </style>
 </head>
 
-<!-- Google tag (gtag.js) — あなたの指示通り、headの外（</head>直後） -->
+<!-- Google tag (gtag.js) — headの外（</head>直後） -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HXM85ZV043"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -142,14 +141,14 @@
   <div class="container">
     <h1>沖ドキツール</h1>
 
-    <!-- テーマ選択（左寄せのまま） -->
+    <!-- テーマ選択 -->
     <div class="theme-bar">
       <button class="theme-btn" data-key="gold">ゴールド</button>
       <button class="theme-btn" data-key="black">ブラック</button>
       <button class="theme-btn" data-key="gorgeous">ゴージャス</button>
     </div>
 
-    <!-- 操作（左寄せのまま） -->
+    <!-- 操作 -->
     <div class="controls">
       <button id="add-row-btn">＋ 履歴を追加</button>
       <button id="reset-btn">リセット（初期10件）</button>
@@ -170,22 +169,22 @@
       <tbody id="tbody"></tbody>
     </table>
 
-    <!-- グラフ（モバイルは小さめ表示） -->
+    <!-- グラフ -->
     <div class="charts">
       <div class="chart-card"><canvas id="chartScatter"></canvas></div>
     </div>
   </div>
 
-  <!-- Chart.jsのみ -->
+  <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 
-  <!-- ロジック（最小変更） -->
+  <!-- ロジック -->
   <script>
-    /* テーマ（RB/BBの有利G差のみ） */
+    /* テーマ（濃色・薄色・RB/BBの有利G） */
     const THEMES = {
-      gold:     { color:"#F7C948", yuuri:{ RB:29, BB:69 } },
-      black:    { color:"#111111", yuuri:{ RB:24, BB:59 } },
-      gorgeous: { color:"#E91E63", yuuri:{ RB:24, BB:59 } }
+      gold:     { color:"#F7C948", light:"#FFF8DC", yuuri:{ RB:29, BB:69 } },
+      black:    { color:"#111111", light:"#E0E0E0", yuuri:{ RB:24, BB:59 } },
+      gorgeous: { color:"#E91E63", light:"#FFE4EC", yuuri:{ RB:24, BB:59 } }
     };
 
     /* 固定値（RB/BB） */
@@ -234,14 +233,14 @@
       inp.oninput = recalc;
       td3.appendChild(inp);
 
-      // 有利G（累計表示）
+      // 有利G（累計）
       const td4 = document.createElement("td");
       const y = document.createElement("span");
       y.className = "value-text";
       y.textContent = "0";
       td4.appendChild(y);
 
-      // 差枚（累計表示）
+      // 差枚（累計）
       const td5 = document.createElement("td");
       const m = document.createElement("span");
       m.className = "value-text";
@@ -264,7 +263,7 @@
       [...tbody.querySelectorAll("tr")].forEach((tr,i)=> tr._refs.td1.textContent = `${i+1}個目`);
     }
 
-    /* グラフ（高さはCSSに任せる） */
+    /* グラフ（線色はテーマ色に同期） */
     let chart;
     function initChart(){
       const ctx = document.getElementById("chartScatter").getContext("2d");
@@ -319,18 +318,23 @@
     /* 追加/リセット・テーマ */
     function addRow(){ buildRow(tbody.children.length,{label:`${tbody.children.length+1}個目`,kind:"RB",games:""}); recalc(); }
     function reset(){ tbody.innerHTML=""; DEFAULT_ROWS.forEach((r,i)=>buildRow(i,r)); recalc(); }
-    function applyTheme(k){
-      const t = THEMES[k];
+    function applyTheme(key){
+      const t = THEMES[key];
+      /* ▼テーマ色（濃/薄）をCSS変数に反映 → タイトル/表ヘッダー/グラフ枠が同期して変化 */
       document.documentElement.style.setProperty("--theme", t.color);
+      document.documentElement.style.setProperty("--theme-light", t.light);
+      /* Yuuriも機種ごとに更新 */
       FIXED_YUURI = { ...t.yuuri };
-      document.querySelectorAll(".theme-btn").forEach(b=> b.classList.toggle("active", b.dataset.key===k));
+      /* ボタンの選択状態 */
+      document.querySelectorAll(".theme-btn").forEach(b=> b.classList.toggle("active", b.dataset.key===key));
+      /* グラフ線色更新 */
       recalc();
     }
 
     /* 初期化 */
     reset();
     initChart();
-    applyTheme("gold");
+    applyTheme("gold"); /* 初期=ゴールド */
     document.querySelectorAll(".theme-btn").forEach(b=> b.onclick = () => applyTheme(b.dataset.key));
     document.getElementById("add-row-btn").onclick = addRow;
     document.getElementById("reset-btn").onclick   = reset;
